[project]
name = "park-hub"
version = "0.1.0"
description = ""
authors = [
    {name = "Caio",email = "caiofeliperro@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "fastapi (>=0.117.1,<0.118.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" }
]