[project]
name = "park-hub"
version = "0.1.0"
description = ""
authors = [
    {name = "Caio",email = "caiofeliperro@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "fastapi>=0.117.1,<0.118.0",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg[binary] (>=3.2.4,<4.0.0)",
    "greenlet (>=3.0.0,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "alembic-postgresql-enum (>=1.3.0,<2.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pydantic[email] (>=2.11.9,<3.0.0)",
    "PyJWT (>=2.8.0,<3.0.0)",
    "python-multipart>=0.0.20",
    "boto3>=1.40.59",
    "faker>=37.12.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-faker>=2.0.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "pytest-mock>=3.15.1",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" }
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
